# deep-tournament-selection

./: .gitignore  LICENSE  README.md  analyze_k_sweep.py  check.sbatch  make_paper_figures.py  pyproject.toml  requirements.txt  run_experiments.py  run_k_sweep.py
deep_tournament_selection/: __init__.py  caching_evaluator.py  config.py  elitist_breeder.py  logging_utils.py
deep_tournament_selection/experiments/: common.py  graph_coloring.py  one_max.py  runner_utils.py  set_cover.py  tsp.py
deep_tournament_selection/problems/: __init__.py  diversity.py  graph_coloring.py  operators.py  set_cover.py  tsp.py
deep_tournament_selection/runners/: custom_runner.py  graph_coloring.py  set_cover.py  tsp.py
deep_tournament_selection/selection/: __init__.py  critic_network.py  custom_reward.py  deep_neural_selection.py  dns_aux.py  dts_aux.py  dts_policy.py  eckity_adapter.py  fitness_featurizer.py  pointer_transformer.py  population_to_vec_transformer.py  ranked_based_embeddings.py  ranked_based_pointer.py  replay_buffer.py  reward_baseline.py  self_attention_pointer.py  simple_self_attention.py  tournament_utils.py  trajectory_tracker.py
scripts/: run_k_sweep.slurm  run_paper_figures.slurm
