[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-tournament-selection"
version = "0.1.0"
description = "Reference implementation of 'Deep Tournament Selection for Genetic Algorithms' (Shem-Tov, Edri, Elyasaf) — a learned, RL-trained selection operator for EC-KitY."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Eliad Shem-Tov" },
    { name = "Ron Edri" },
    { name = "Achiya Elyasaf" },
]
dependencies = [
    "eckity",
    "torch",
    "numpy",
    "overrides",
]

[tool.setuptools.packages.find]
include = ["deep_tournament_selection*"]

[tool.setuptools.package-data]
deep_tournament_selection = ["problems/data/**/*"]
