[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-tournament-selection"
version = "0.1.0"
description = "Reference implementation of 'Deep Tournament Selection for Genetic Algorithms' (Shem-Tov, Edri, Elyasaf) — a learned, RL-trained selection operator for EC-KitY."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Eliad Shem-Tov" },
    { name = "Ron Edri" },
    { name = "Achiya Elyasaf" },
]
# Lower bounds are the versions we developed and ran the paper experiments with
# (Python 3.11–3.14; CPU on macOS and CUDA on the cluster). Newer releases work too.
dependencies = [
    "eckity>=0.4.1",
    "torch>=2.10.0",
    "numpy>=2.3.5",
    "scipy>=1.13.0",   # required by eckity at import time (fp_selection uses scipy.special.softmax)
    "overrides>=7.7.0",
]

[tool.setuptools.packages.find]
include = ["deep_tournament_selection*"]

[tool.setuptools.package-data]
deep_tournament_selection = ["problems/data/**/*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]   # pycodestyle errors/warnings + pyflakes
ignore = ["E501"]          # line length is governed by `ruff format`
